# blogium

./: .env.example  .gitignore  Cargo.toml  Dockerfile.backend  README.md  docker-compose.yml
client/: .env.example  Dockerfile.frontend  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
client/src/: App.tsx  const.ts  main.tsx
client/src/api/mutations/: useCreatePostMutation.tsx
client/src/api/queries/: useFetchPosts.tsx
client/src/components/: CreatePostForm.tsx  NotFound.tsx  PostCard.tsx  PostCardSkeleton.tsx  PostsList.tsx
migrations/: 20241021222722_create_db.down.sql  20241021222722_create_db.up.sql  20241021222722_create_posts.up.sql
src/: config.rs  errors.rs  handler.rs  lib.rs  main.rs  model.rs  responses.rs  route.rs  schema.rs  state.rs
src/handlers/: image_handler.rs  mod.rs  post_handler.rs
src/models/: image_model.rs  mod.rs  post_model.rs
src/schemas/: mod.rs  post_schema.rs  utils.rs
src/services/: image_service.rs  mod.rs  post_service.rs
