[package]
name = "blogium"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
axum = "0.7"
axum_typed_multipart = "0.13.1"
chrono = { version = "0.4.38", features = ["serde"] }
mime_guess = "2.0.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["io"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
