[package]
name = "blogium"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
axum = "0.7"
axum_typed_multipart = "0.13.1"
bytes = "1.8.0"
chrono = { version = "0.4.38", features = ["serde"] }
mime_guess = "2.0.5"
reqwest = "0.12.8" 
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["io"] }
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
